--- a/camera/src/main/res/values/strings.xml
+++ b/camera/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">TouchInputLibrary</string>
+    <string name="app_name">CameraSupportLibrary</string>
 </resources>
